[gd_scene load_steps=17 format=3 uid="uid://dlamvxqhwspfr"]

[ext_resource type="Script" path="res://Scene/shop/scripts/shop_ui.gd" id="1_fa6yd"]
[ext_resource type="Texture2D" uid="uid://thy6fbpr05lj" path="res://Asset/img/other/Julia.jpeg" id="1_m752y"]
[ext_resource type="VideoStream" path="res://Asset/img/other/ac215eaefff22d1b2a35e5a5b17c959b.ogv" id="2_mmnqt"]
[ext_resource type="Resource" uid="uid://cgabhv2a8iop1" path="res://Scene/shop/res/shop_data.tres" id="2_si3y4"]
[ext_resource type="Texture2D" uid="uid://bvr7bb1dfru48" path="res://Asset/img/other/UI_TravelBook_BookCover01a.png" id="3_4g2l4"]
[ext_resource type="Texture2D" uid="uid://ch6dywmamfjgc" path="res://Asset/img/other/little_scroll.png" id="6_g50n1"]
[ext_resource type="Texture2D" uid="uid://dn132a5on4c1" path="res://Asset/img/other/UI_TravelBook_Slot01b.png" id="6_jgb4o"]
[ext_resource type="Texture2D" uid="uid://db4wks5sx6k5a" path="res://Asset/img/other/Pixel_MÃ¼nze-removebg-preview.png" id="7_5dcep"]
[ext_resource type="Texture2D" uid="uid://b50a87w6nrbyh" path="res://Asset/Rpg1/iconCross_brown.png" id="7_nkdiv"]
[ext_resource type="Texture2D" uid="uid://mqbuyl25lq8r" path="res://Asset/img/other/action-removebg-preview.png" id="7_pfo34"]
[ext_resource type="Texture2D" uid="uid://b2warbq8ytskm" path="res://Asset/img/other/inventory-removebg-preview.png" id="8_3ur2o"]
[ext_resource type="Theme" uid="uid://1rjbfgnnnwya" path="res://Text_theme.tres" id="8_7j0f4"]
[ext_resource type="Script" path="res://Scene/shop/scripts/shop_inventory.gd" id="12_711ar"]
[ext_resource type="Resource" uid="uid://cq2k5kbpfs0qj" path="res://Scene/shop/res/item_shop.tres" id="13_mktbj"]
[ext_resource type="Resource" uid="uid://db6elm0ogbxb4" path="res://Scene/shop/res/action_shop.tres" id="14_64bkx"]
[ext_resource type="Script" path="res://Scene/Scripts/scroll_container.gd" id="21_ogs2p"]

[node name="ShopUi" type="Node2D"]
script = ExtResource("1_fa6yd")
data = ExtResource("2_si3y4")

[node name="backgroud_vid" type="VideoStreamPlayer" parent="."]
offset_top = -70.0
offset_right = 1088.0
offset_bottom = 1018.0
stream = ExtResource("2_mmnqt")
autoplay = true
loop = true

[node name="Julia" type="Sprite2D" parent="."]
visible = false
position = Vector2(540, 542)
scale = Vector2(1.06641, 1.06641)
texture = ExtResource("1_m752y")

[node name="Panel" type="PanelContainer" parent="."]
clip_contents = true
offset_top = 992.0
offset_right = 1084.0
offset_bottom = 2184.0

[node name="PanelBrown" type="Sprite2D" parent="Panel"]
modulate = Color(0.221902, 0.221902, 0.221902, 1)
position = Vector2(539.187, 1101.91)
rotation = 1.5708
scale = Vector2(10.0578, 7.96748)
texture = ExtResource("3_4g2l4")

[node name="exit" type="TextureButton" parent="."]
top_level = true
z_index = 1
anchors_preset = -1
anchor_right = 1.025
anchor_bottom = 1.01563
offset_left = 970.0
offset_top = 54.0
offset_right = -65.0
offset_bottom = -1816.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="IconCrossBeige" type="Sprite2D" parent="exit"]
z_index = 1
position = Vector2(38.1666, 35.125)
scale = Vector2(3.58333, 3.58333)
texture = ExtResource("7_nkdiv")

[node name="scroll" type="TextureRect" parent="."]
offset_left = 22.0
offset_top = 39.0
offset_right = 292.0
offset_bottom = 163.0
texture = ExtResource("6_g50n1")

[node name="coin" type="TextureRect" parent="scroll"]
layout_mode = 0
offset_left = 36.0
offset_top = 13.0
offset_right = 441.0
offset_bottom = 629.0
scale = Vector2(0.15, 0.15)
texture = ExtResource("7_5dcep")

[node name="Label" type="Label" parent="scroll"]
layout_mode = 0
offset_left = 96.0
offset_top = 36.0
offset_right = 222.0
offset_bottom = 97.0
theme = ExtResource("8_7j0f4")
theme_override_font_sizes/font_size = 65
text = "100"

[node name="item_button" type="Button" parent="."]
offset_left = 392.0
offset_top = 960.0
offset_right = 491.0
offset_bottom = 1054.0
flat = true

[node name="TextureRect" type="TextureRect" parent="item_button"]
modulate = Color(0.571649, 0.571649, 0.571649, 1)
layout_mode = 0
offset_left = -2.0
offset_top = -4.0
offset_right = 102.0
offset_bottom = 100.0
texture = ExtResource("6_jgb4o")

[node name="TextureRect2" type="TextureRect" parent="item_button"]
layout_mode = 0
offset_left = 9.00003
offset_top = 2.0
offset_right = 130.0
offset_bottom = 127.0
scale = Vector2(0.7, 0.7)
texture = ExtResource("8_3ur2o")

[node name="action_button" type="Button" parent="."]
offset_left = 584.0
offset_top = 960.0
offset_right = 683.0
offset_bottom = 1054.0
flat = true

[node name="TextureRect" type="TextureRect" parent="action_button"]
modulate = Color(0.571649, 0.571649, 0.571649, 1)
layout_mode = 0
offset_left = -2.0
offset_top = -4.0
offset_right = 102.0
offset_bottom = 100.0
texture = ExtResource("6_jgb4o")

[node name="TextureRect3" type="TextureRect" parent="action_button"]
layout_mode = 0
offset_left = 7.0
offset_top = 7.0
offset_right = 146.0
offset_bottom = 137.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("7_pfo34")

[node name="items_shop" type="ScrollContainer" parent="."]
offset_left = 22.0
offset_top = 1094.0
offset_right = 1069.0
offset_bottom = 2072.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 2
script = ExtResource("21_ogs2p")

[node name="HBoxContainer" type="GridContainer" parent="items_shop"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 360
theme_override_constants/v_separation = 600
columns = 3
script = ExtResource("12_711ar")
shop_items = ExtResource("13_mktbj")
shop_actions = ExtResource("14_64bkx")

[node name="Control" type="Control" parent="items_shop/HBoxContainer"]
layout_mode = 2

[node name="BoxContainer" type="BoxContainer" parent="items_shop"]
layout_mode = 2

[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="item_button" to="." method="_on_item_button_pressed"]
[connection signal="pressed" from="action_button" to="." method="_on_action_button_pressed"]
